MNT: Re-rendered with conda-build 3.18.9, conda-smithy 3.4.1, and conda-forge-pinning 2019.07.26

--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -16,3 +16,8 @@ docker_image:
 - condaforge/linux-anvil-comp7
 glib:
 - '2.58'
+openssl:
+- 1.1.1a
+pin_run_as_build:
+  openssl:
+    max_pin: x.x.x
