--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -20,3 +20,8 @@ macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.9'
+openssl:
+- 1.1.1a
+pin_run_as_build:
+  openssl:
+    max_pin: x.x.x
