--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,10 +10,11 @@ source:
   sha256: 9bfea03b33c387a37ff454aaed936ac8f17007b92ed6693c790a8365c2c59462
 
 build:
-  number: 1
+  number: 2
   skip: true  # [win]
   run_exports:
-    - {{ pin_subpackage(name, max_pin='x.x') }}
+    # Building with a different gsoap version changes the ABI
+    - {{ pin_subpackage(name, exact=True) }}
 
 requirements:
   build:
