MNT: Re-rendered with conda-build 3.21.4, conda-smithy 3.14.3, and conda-forge-pinning 2021.11.03.23.52.26

--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -5,7 +5,7 @@ c_compiler_version:
 cdt_name:
 - cos6
 channel_sources:
-- conda-forge,defaults
+- conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
@@ -16,6 +16,8 @@ docker_image:
 - quay.io/condaforge/linux-anvil-comp7
 glib:
 - '2'
+gsoap:
+- 2.8.117
 openssl:
 - 1.1.1
 target_platform:
