--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -5,7 +5,7 @@ c_compiler:
 c_compiler_version:
 - '11'
 channel_sources:
-- conda-forge,defaults
+- conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
@@ -14,6 +14,8 @@ cxx_compiler_version:
 - '11'
 glib:
 - '2'
+gsoap:
+- 2.8.117
 macos_machine:
 - x86_64-apple-darwin13.4.0
 openssl:
