MNT: Re-rendered with conda-build 3.21.4, conda-smithy 3.16.1, and conda-forge-pinning 2022.01.22.21.00.53

--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -18,6 +18,8 @@ cxx_compiler_version:
 - '9'
 docker_image:
 - quay.io/condaforge/linux-anvil-aarch64
+gct:
+- 6.2.1629922860
 glib:
 - '2'
 gsoap:
