--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,11 +12,12 @@ source:
     - 0001-Check-_DARWIN_FEATURE_ONLY_64_BIT_INODE-in-gfal_srm_.patch
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win]
   run_exports:
+    - {{ pin_subpackage(name, "x.x.x") }}
     # Building with a different gsoap version changes the ABI
-    - {{ pin_subpackage(name, exact=True) }}
+    - {{ pin_compatible('gsoap', max_pin='x.x.x') }}
 
 requirements:
   build:
